@@ -7,6 +7,7 @@ xxxx/xx/xx
           (old default) to really mean 0 and want -1 (new default) to mean
           "use topology precision" (Sandro Santilli)
  - #6024, Remove support for PostgreSQL 12 and 13 (Regina Obe)
+ - #6040, ST_GeoHash round trip through ST_GeomFromGeoHash (Paul Ramsey)
 
 
 * New Features *
